<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="exercise"
            type="ru.adfmp.officegym.database.BaseExercise" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:gravity="center"
            android:minHeight="@dimen/min_list_item_height"
            android:orientation="vertical"
            android:paddingBottom="?attr/actionBarSize">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/cancel_button_text" />

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/save_button_text" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/edit_exercises_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/title_edit_all_exercises"
                    android:maxHeight="400dp"
                    android:src="@drawable/icon_005_exercise" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="@dimen/min_list_item_height"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_exercise_name"
                    style="@style/NormalTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@={exercise.name}"
                    tools:text="@string/title_exercise" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/SmallTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/simple_recommended_duration" />

                    <EditText
                        android:id="@+id/edit_exercise_duration"
                        style="@style/SmallTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        app:editRecommendedDuration="@={exercise.recommendedDuration}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/SmallTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/simple_intensity" />

                    <EditText
                        android:id="@+id/edit_exercise_intensity"
                        style="@style/SmallTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        app:editIntensity="@={exercise.intensity}" />
                </LinearLayout>


                <EditText
                    android:id="@+id/edit_exercise_description"
                    style="@style/SmallTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@={exercise.description}"
                    tools:text="@string/description" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/delete_button_text"
                    app:isGone="@{exercise.id}" />
            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</layout>
