<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="workout"
            type="ru.adfmp.officegym.database.Workout" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:gravity="center"
            android:minHeight="@dimen/min_list_item_height"
            android:orientation="vertical"
            android:paddingBottom="?attr/actionBarSize">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/cancel_button_text" />

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/save_button_text" />
            </FrameLayout>

            <EditText
                android:id="@+id/workout_name"
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_weight="1"
                android:text="@={workout.workoutInfo.name}"
                tools:text="@string/workout_name_hint" />

            <TextView
                android:id="@+id/workout_total_duration"
                style="@style/SmallTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_weight="1"
                app:totalDuration="@{workout.exercises}"
                tools:text="@string/total_duration" />

            <TextView
                android:id="@+id/workout_mean_intensity"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_weight="1"
                app:meanIntensity="@{workout.exercises}"
                tools:text="@string/mean_intensity" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/delete_button_text"
                    app:isGone="@{workout.workoutInfo.id}" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/edit_exercise_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="29"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_exercise" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_exercise_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:focusable="true"
                android:src="@drawable/ic_add_black_24dp"
                app:backgroundTint="@color/grey"
                app:isGone="@{workout.workoutInfo.id}"
                tools:visibility="visible" />


        </LinearLayout>

    </ScrollView>

</layout>
